tidied UI, esp on Safari. fixed #43 and #33

--- a/assets/styles/wikimess/landscape.css
+++ b/assets/styles/wikimess/landscape.css
@@ -122,6 +122,6 @@
     }
 
     .wikimess .subnavbar span {
-	padding: 2vh;
+	padding: 2px;
     }
 }
