--- a/assets/styles/wikimess/portrait.css
+++ b/assets/styles/wikimess/portrait.css
@@ -111,6 +111,6 @@
     }
 
     .wikimess .subnavbar span {
-	padding: 2vw;
+	padding: 2px;
     }
 }
