--- a/assets/styles/wikimess/wikimess.css
+++ b/assets/styles/wikimess/wikimess.css
@@ -70,6 +70,7 @@ input {
 .wikimess .newlhs .button,
 .wikimess .help .button,
 .wikimess .grammarbar .button {
+    font-size: x-large;
     width: 1em;
     height: 1em;
     cursor: pointer;
@@ -82,6 +83,7 @@ input {
 
 .wikimess .grammarbar .rulecontrols .button {
     float: left;
+    padding-top: 4px;
     padding-right: 4px;
 }
 
@@ -227,9 +229,10 @@ input {
 }
 
 .wikimess .grammarinfopane {
-    border-top-style: solid;
-    border-left-style: solid;
-    border-right-style: solid;
+    margin-left: 1px;
+    margin-bottom: 4px;
+    margin-right: 4px;
+    border-style: solid;
     border-width: 1px;
     z-index: 1;
     margin-left: 1px;
@@ -250,12 +253,12 @@ input {
 }
 
 .wikimess .grammarinfopane .controls {
-    font-size: large;
+    font-size: x-large;
     float: right;
 }
 
 .wikimess .grammarinfopane .leftcontrols {
-    font-size: large;
+    font-size: x-large;
     float: left;
 }
 
@@ -515,6 +518,11 @@ input {
     display: none;
 }
 
+.wikimess .messageheader,
+.wikimess .messageheader textarea {
+    font-size: large;
+}
+
 .wikimess .messageheader {
     border-top-style: solid;
     border-width: 1px;
@@ -652,7 +660,9 @@ input {
 }
 
 .wikimess .subnavbar {
-    min-height: 2em;
+    font-size: xx-large;
+    min-height: 1em;
+    max-height: 1em;
     display: flex;
     justify-content: space-between;
     border-top-style: solid;
@@ -686,7 +696,7 @@ input {
 
 .wikimess .compose .messageheader textarea {
     width: 100%;
-    height: 1em;
+    height: 1.2em;
 }
 
 .wikimess .compose .messageheader textarea.recipient {
